--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -62,6 +62,7 @@
 .card h2 {
   font-weight: 600;
   margin-bottom: 0.7rem;
+  font-family: var(--font-primary);
 }
 
 .card p {
@@ -70,6 +71,7 @@
   font-size: 0.9rem;
   line-height: 1.5;
   max-width: 30ch;
+  font-family: var(--font-secondary);
 }
 
 .center {
